styling changes for the share button to be visible on mobile. this should prevent horizontal scroll bars on iPhone.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -54,6 +54,11 @@ Any media size specific and resize related rules should be here.
         min-width: $targetinfoWidth;
         margin-left: -5px;
       }
+
+      .share-button {
+        margin-right: -136px;
+      }
+
     }
   }
 
@@ -238,6 +243,10 @@ Any media size specific and resize related rules should be here.
         padding-top: 5px; 
         width: 100%;
         border-right: solid gray 2px;
+      }
+
+      .share-button {
+        margin-right: 0px;
       }
     } 
   }
