--- a/app/assets/stylesheets/identity.css.scss
+++ b/app/assets/stylesheets/identity.css.scss
@@ -36,7 +36,8 @@
 		padding-left: 14px;
 
 		#recaptcha_privacy {
-			font-size: 8pt;
+			font-size: 6pt;
+			line-height: 6pt;
 			overflow: hidden;
 			text-overflow: ellipsis;
 		}
